# adquisicion_de_datos

./: .gitignore  README.md  diagram.json  ultrasonic.c
actividad_1/: main.c
actividad_2/: README.md  main.c
actividad_2/libs/inc/: bmp280.h
actividad_3/: CMakeLists.txt
actividades/: README.md
actividades/actividad_1/: CMakeLists.txt  README.md  main.c
actividades/actividad_1/libs/inc/: lcd_i2c.h
actividades/actividad_2/: CMakeLists.txt  diagram.json  main.c
actividades/actividad_2/libs/: lcd_i2c.c
actividades/actividad_2/libs/bmp280/: bmp280.c  bmp280.h
actividades/actividad_2/libs/inc/: lcd_i2c.h
actividades/actividad_2/libs/lcd_i2c/: lcd.c  lcd.h
actividades/actividad_3/: CMakeLists.txt  README.md  main.c
actividades/actividad_4/: CMakeLists.txt  README.md  main.c
actividades/actividad_4/libs/: ultrasonico.c
actividades/actividad_4/libs/inc/: ultrasonico.h
actividades/legacy/2023_actividad_1_v1/: CMakeLists.txt
apuntes/: README.md
datasheets/: README.md
